# voice-live-api-browser-talk

./: .env.example  .gitignore  README.MD  mcp_servers.json  pyproject.toml  server.py  tools.py  voice_agent.py
frontend/: audio-processor.js  index.css  index.html  index.js  mic-processor.js
